Version 1.22.1
==================
- Fixed mouse scroll issue in log and lst-viewer on macOS, i.e. the scrolling is smooth now.
- Fixed horizontal viewer tab scrolling, when one specific project is focused.
- Fixed directories in project options not changeable when default workdir isn't defined (e.g. when starting with --ignore-settings)
- Improved the workflow to create a new empty project.
- Improved dynamic main file selection, i.e. instantly set the main file marker on tab change.
- Upgraded to Qt 6.9.2.

Version 1.22.0
==================
- Added the `gamsprobe` output to the `Copy System Information` output of the GAMS Licensing dialog.
- Added dynamic main file functionality. This will automatically set the current `gms` file as the project's main file when running the model. 
- Added additional system log messages in case a GAMS executable is missing, like `gams` or `gamsgetkey`.
- Added import functionality for project files from the classic GAMS IDE (*.gpr). This is a Windows only feature.
- Added warnings for missing files when loading a Studio project.
- Added On-Prem license server support.
- Improved error messages for license installations via ALP.
- Improved Studio to ignore the old style GAMS licenses, i.e. only accept the modern GAMS licenses.
- Improved Reference File Viewer with key navigation through symbols and references.
- Fixed crash when reading a Studio project and the main `gms` file is missing.
- Fixed tab menu to show only files of the focused project (when focused).
- Fixed a crash when a project with an extension number, i.e. two projects have the same display name, is edited in the project options.
- Fixed empty `FileUsed` Tab in Reference File Viewer when the file has been updated and reloaded.
- Fixed a crash when opening a file containing an unknown schema data name in Connect Editor.

Version 1.21.5
==================
- Added count of active processes to Studio title.
- Fixed missing shortcuts Shift-F9 and Shift-F10.